# simple-rust-web-server

./: .gitignore  Cargo.toml
frontend/: package.json
frontend/src/: App.vue  http.ts  main.ts
frontend/src/components/: UpdateName.vue
src/: auth.rs  main.rs
