[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-web = "4.0.1"
futures-util = "0.3.21"
rand = "0.8.5"
rusqlite = { version = "0.27.0", features = ["bundled"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sha3 = "0.10.1"
